fix: 프로필 수정 및 프론트엔드요청으로 식당상세페이지 tag response 수정 (#30)
* fix: 프로필 수정

* fix: RestaurantDetail tag 내림차순으로 정렬